--- a/css/footer.css
+++ b/css/footer.css
@@ -1,32 +1,33 @@
-@charset "UTF-8";
-/* CSS Document */
-
+/*pcスタイル*/
+@media screen and (min-width:641px){
 /*footer*/
-.footer {
+.footer{
     padding: 40px 0 45px 0;
     color: #fff;
     background-color: #9362c4;
 }
-.footer_inner {
+
+.footer_inner{
     margin: 0 auto;
     width: 1050px;
 }
-.footer_list {
+
+.footer_list{
     float: left;
     font-size: 0;
 }
-.footer_sns {
-    float: right;
-}
-.footer_list li {
+
+.footer_list li{
     display: inline-block;
     margin-left: 50px;
     width: 225px;
 }
-.footer_list li:first-child {
+
+.footer_list li:first-child{
     margin-left: 0;
 }
-.footer_list_title {
+
+.footer_list_title{
     position: relative;
     margin-bottom: 10px;
     padding-left: 35px;
@@ -34,20 +35,23 @@
     font-size: 18px;
     font-weight: normal;
 }
-.footer_list_title::after {
+
+.footer_list_title::after{
     content: '';
     position: absolute;
-    top: 0;
+    top:0;
     left: 0;
     width: 27px;
     height: 27px;
-    background-image: url("../img/top_pc-assets/footer_icon.png");
+    background-image: url("../img/footer_icon.png")
 }
-.footer_list_address {
+
+.footer_list_address{
     font-size: 14px;
     line-height: 1.2;
 }
-.footer_tel {
+
+.footer_tel{
     position: relative;
     margin-top: 15px;
     padding-left: 30px;
@@ -55,7 +59,8 @@
     font-weight: bold;
     font-family: "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro";
 }
-.footer_tel::after {
+
+.footer_tel::after{
     content: '';
     position: absolute;
     top: 0;
@@ -64,25 +69,85 @@
     margin: auto;
     width: 20px;
     height: 16px;
-    background-image: url("../img/top_pc-assets/tell_icon.png");
+    background-image: url("../img/tell_icon.png")
 }
-.footer_sns {
+
+.footer_sns{
+    float: right;
     padding-left: 22px;
     height: 88px;
     text-align: center;
     border-left: 2px dotted #fff;
 }
-.footer_sns_list {
+
+.footer_sns_list{
     margin-top: 20px;
     font-size: 0;
 }
-.footer_sns_list li {
+
+.footer_sns_list li{
     display: inline-block;
     margin-left: 20px;
 }
-.copyright {
+
+.footer_sns_list li:first-child{
+    margin-left: 0;
+}
+
+.copyright{
     float: right;
     margin-top: 8px;
     font-size: 12px;
     color: #cfc0dd;
+}
+}
+
+
+
+/*spスタイル*/
+@media screen and (max-width:640px){
+    .footer{
+        padding: 10px 0;
+        color: #000;
+        background-color: #9362c4;
+    }
+
+    .footer_inner{
+        margin: 0 auto;
+        width: 290px;
+        display: block;
+
+    }
+
+    .footer_sns_text{
+        text-align: center;
+        font-size: 12px;
+    }
+
+    .footer_sns_list{
+        margin-top: 20px;
+        padding-bottom: 30px;
+        font-size: 0;
+        text-align: center;
+    }
+
+    .footer_sns_list img{
+        width: 42px;
+    }
+
+    .footer_sns_list li{
+        display: inline-block;
+        margin-left: 20px;
+    }
+
+    .footer_sns_list li:first-child{
+        margin-left: 0;
+    }
+
+    .copyright{
+        font-size: 12px;
+        color: #cfc0dd;
+        display: block;
+        text-align: center;
+    }
 }
