--- a/css/index.css
+++ b/css/index.css
@@ -1,267 +1,334 @@
-@charset "UTF-8";
-/* CSS Document */
-/* 共通設定 */
-body {
-    font-family: "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
-}
-p, a, span {
-    font-size: 14px;
-}
-a {
-    text-decoration: none;
+/*pcスタイル*/
+@media screen and (min-width:641px){
+    /*左右センター*/
+    .shop_inner{
+        margin:0 auto;
+        padding: 50px 0;
+        width: 1050px;
+    }
+    
+    /*店舗リンク*/
+    .shop_tab{
+        font-size: 0;
+    }
+    
+    li.shop_tab_ttl{
+        display: inline-block;
+        position: relative;
+        padding:10px 18px 10px 42px;
+        margin-right: 18px;
+        border-right: 1.5px solid #9362c4;
+        transform: skewX(-45deg);
+    }
+    
+    li.shop_tab_ttl:last-child{
+        border-right: 0;/*斜線消し*/
+    }
+    
+    li.shop_tab_ttl:first-child{
+        padding-left: 48px;
+    }
+    
+    li.shop_tab_ttl a{
+        display: block;
+        font-size: 24px;
+        color: #9362c4;
+        font-weight: normal;
+        transform: skewX(45deg);
+    }
+    
+    .shop_tab_ttl::after{
+        content: '';
+        position: absolute;
+        top:2px;
+        left: 1px;
+        width: 38px;
+        height: 38px;
+        transform: skewX(45deg);
+        background-image: url("../img/tab_ttl_icon.png");
+    }
+    
+    /*イメージ画像*/
+    .shop_image{
+        font-size: 0;
+        float: left;
+    }
+    
+    .shop_image li{
+        display: inline-block;
+        margin-left: 30px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+    
+    .shop_image li:first-child{
+        margin-left: 0;
+    }
+    
+    .shop_image li img{
+        width: 330px;/*画像サイズ*/
+    }
+    
+    /*詳しい情報*/
+    .shop_info{
+        float: left;
+    }
+    
+    .shop_ttl{
+        width: 500px;
+        font-size: 24px;
+        font-weight: bold;
+        color: #3c3c3c;
+        border-bottom: 1px solid #804e6b;
+        text-align: left;
+        padding-bottom: 20px;
+        margin-bottom: 15px;
+    }
+    
+    .shop_info_table{
+        height: 225px;
+        width: 500px;
+        position:relative;
+    }
+    
+    .shop_info_table::before{
+        content:"";
+        height:86%;
+        border-right:dotted 1px #804e6b;
+        position:absolute;
+        top:18px;
+        left:118px;
+    }
+    
+    .shop_info_table td,th{
+        vertical-align: middle;/*上下中央*/
+        color:#3c3c3c;
+        box-sizing: border-box;
+        height: 65px;
+        /*height: 50px;*/
+    }
+    
+    .shop_info_th{
+        width: 120px;
+        text-align-last: justify;/*両端揃え*/
+        padding-right: 20px;
+        font-size: 18px;
+        /* border-right: 1px dashed #804e6b; */
+    }
+    
+    .shop_info_td{
+        width: auto;
+        font-size: 18px;
+    }
+    
+    .shop_info_td,
+    .train_route{
+        padding-left: 20px;
+    }
+    
+    .shop_tel{
+        position: relative;
+        padding-left: 45px;
+        font-size: 52px;
+        letter-spacing: 1px;
+    }
+    
+    .shop_tel::after{
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        margin: auto;
+        width: 38px;
+        height: 28px;
+        background-image: url("../img/tel_icon_big.png");/*電話アイコン*/
+    }
+    
+    .train_route{
+        font-size: 12px;
+        width: 90px;
+        line-height: 15px;
+    }
+    
+    /*アクセスmap*/
+    .shop_map{
+        width:500px;
+        height:300px;
+        font-size: 0;
+        float:right;
+    }
+    
+    .shibata_nihonbashi,
+    .shibata_kyoto{
+        display: none;
+    }
 }
 
-/*header*/
-.header {
-    width: 100%;
-    height: 100px;
-    background-color: #9362c4;
-}
-.head_logo {
-    float: left;
-}
-.head_nav {
-    float: right;
-    font-size: 0;
-    margin-top: 15px;
-}
-.head_nav li{
-    position: relative;
-    display: inline-block;
-    margin-left: 15px;
-    padding-right: 15px;
-    vertical-align: middle;
-}
-.head_nav li::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    margin: auto;
-    width: 1px;
-    height: 20px;
-    background-color: #804e6b;
-}
-.head_nav li:last-child::after {
-    display: none;
-}
-.head_nav li:last-child {
-    padding-right: 0;
-}
-.header_inner {
-    margin: 0 auto;
-    padding: 35px 0 0 50px;
-    width: 1160px;
-    height: 100%;
-    box-sizing: border-box;
-}
-.head_nav li a {
-    color: #fff;
-}
-/*main visual*/
-.main_info {
-    padding-top: 40px;
-}
-.main_visual {
-    width: 100%;
-    font-size: 0;
-    position: relative;
-}
-.main_img img {
-    width: 100%;
-    min-width: 1050px;
-    height: auto;
-}
-.main_ttl {
-    position: absolute;
-    top: 35px;
-    right: 165px;
-}
 
-/*main info*/
-.main_info {
-    width: 100%;
-    background-image: url(../img/しばた_top_pc-assets/main_bg.png);
-}
-.main_info_inner {
-    margin: 0 auto;
-    position: 50px 0;
-    width: 1050px;
-}
-.main_info_title {
-    margin-bottom: 10px;
-    font-size: 18px;
-    font-weight: bold;
-    position: relative;
-    padding-left: 37px;
-    line-height: 27px;
-}
-.main_info_title::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 27px;
-    height: 27px;
-    background-image: url("../img/しばた_top_pc-assets/ttl_icon.png");
-}
-.new_info_list {
-    padding: 0 14px;
-    border: 1px solid #a3a182;
-    background-color: #fff;
-}
-.new_info_list li {
-    margin-top: 11px;
-    padding-bottom: 11px;
-    border-bottom: 1px dotted #a3a182;
-    font-size: 0px;
-}
-.new_info_list li:last-child {
-    border-bottom: 0;
-}
-.new_info_day,
-.new_info_text {
-    display: inline-block;
-    font-size: 16px;
-}
-.new_info_text {
-    margin-left: 20px;
-}
-.sweets_inner {
-    margin-top: 40px;
-}
-.sweets_list li {
-    display: inline-block;
-    margin-left: 22px;
-}
-.sweets_list li:first-child {
-    margin-left: 0;
-}
-.sweets_list {
-    font-size: 0;
-}
-.sweets_list li img {
-    width: 246px;
-}
-.topics_inner {
-    margin-top: 40px;
-	padding-bottom: 60px;
-}
-.topics_list li {
-    display: inline-block;
-    margin-left: 30px;
-}
-.topics_list li:first-child {
-    margin-left: 0;
-}
-.topics_list {
-    font-size: 0;
-}
-.topics_list li a {
-    font-size: 0;
-}
-.topics_list li img {
-    width: 510px;
-}
-.topics_link {
-    display: inline-block;
-    margin-top: 10px;
-    width: 100%;
-    color: #000;
-    text-align: right;
-}
-.topics_link::after {
-    content: '';
-    display: inline-block;
-    margin-left: 10px;
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-    border-left: 8.7px solid #000;
-}
-/*footer*/
-.footer {
-    padding: 40px 0 45px 0;
-    color: #fff;
-    background-color: #9362c4;
-}
-.footer_inner {
-    margin: 0 auto;
-    width: 1050px;
-}
-.footer_list {
-    float: left;
-    font-size: 0;
-}
-.footer_sns {
-    float: right;
-}
-.footer_list li {
-    display: inline-block;
-    margin-left: 50px;
-    width: 225px;
-}
-.footer_list li:first-child {
-    margin-left: 0;
-}
-.footer_list_title {
-    position: relative;
-    margin-bottom: 10px;
-    padding-left: 35px;
-    line-height: 27px;
-    font-size: 18px;
-    font-weight: normal;
-}
-.footer_list_title::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 27px;
-    height: 27px;
-    background-image: url("../img/しばた_top_pc-assets/footer_icon.png");
-}
-.footer_list_address {
-    font-size: 14px;
-    line-height: 1.2;
-}
-.footer_tel {
-    position: relative;
-    margin-top: 15px;
-    padding-left: 30px;
-    font-size: 20px;
-    font-weight: bold;
-    font-family: "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro";
-}
-.footer_tel::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    width: 20px;
-    height: 16px;
-    background-image: url("../img/しばた_top_pc-assets/tell_icon.png");
-}
-.footer_sns {
-    padding-left: 22px;
-    height: 88px;
-    text-align: center;
-    border-left: 2px dotted #fff;
-}
-.footer_sns_list {
-    margin-top: 20px;
-    font-size: 0;
-}
-.footer_sns_list li {
-    display: inline-block;
-    margin-left: 20px;
-}
-.copyright {
-    float: right;
-    margin-top: 8px;
-    font-size: 12px;
-    color: #cfc0dd;
+
+/*spスタイル*/
+@media screen and (max-width:640px){
+    .shop_inner{
+        margin:0 auto;
+        padding: 30px 0;
+        width: 290px;
+    }
+
+    /*店舗リンク*/
+    .shop_tab{
+        font-size: 0;
+    }
+
+    .shop_tab_ttl{
+        display: block;
+        font-size: 16px;
+        color: #9362c4;
+        font-weight: normal;
+        position: relative;
+        padding-left: 22px;
+    }
+
+    .shop_tab_ttl::after{
+        content: '';
+        position: absolute;
+        top: -2.5px;
+        left: 0;
+        width: 20px;
+        height: 20px;
+        background-image: url("../img/icon_sp.png");
+        background-size: 100%;
+    }
+
+    /*イメージ画像*/
+    .shop_image_sp{
+        font-size: 0;
+        /*float: left;*/
+        overflow-x: scroll;
+        display: flex;
+    }
+
+    .shop_image_sp li{
+        display: inline-block;
+        margin-left: 10px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+
+    .shop_image_sp li:first-child{
+        margin-left: 15px;
+    }
+
+
+    .shop_image_sp li:last-child{
+        margin-right: 15px;
+    }
+
+    /*イメージ画像サイズ*/
+    .shop_image_sp_img img{
+        height: 200px;
+    }
+
+    /*イメージ画像横スクロール*/
+    .slide-wrap{
+        display: flex;
+        overflow-x: scroll;
+        -webkit-overflow-scrolling: touch;
+        scroll-snap-type: x mandatory;
+        scroll-behavior: smooth;
+        width: 320px;
+        margin-left: -15px;
+     }
+
+     .slide-wrap .slide-content {
+        height:100%;
+        flex: 100%;
+        scroll-snap-align:none;
+     }
+
+    /*詳しい情報*/
+    .shop_info_table{
+        width: 290px;
+        position:relative;
+    }
+
+    .shop_info_table::before{
+        content:"";
+        height:86%;
+        border-right:dotted 1px #804e6b;
+        position:absolute;
+        top:13px;
+        left:70px;
+    }
+
+    .shop_info_table td,th{
+        vertical-align: middle;/*上下中央*/
+        color:#3c3c3c;
+        box-sizing: border-box;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .shop_info_th{
+        width: 70px;
+        text-align-last: justify;/*両端揃え*/
+        padding-right: 10px;
+        font-size: 12px;
+    }
+
+    .shop_info_td{
+        width: auto;
+        font-size: 12px;
+        line-height: 1.2em;
+    }
+
+    .shop_info_td,
+    .train_route{
+        padding-left: 10px;
+    }
+
+    .shop_tel{
+        position: relative;
+        padding-left: 25px;
+        font-size: 32px;
+        letter-spacing: 0px;
+    }
+
+    .shop_tel::after{
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        margin: auto;
+        width: 19px;
+        height: 14px;
+        background-image: url("../img/tel_icon_sp.png");/*電話アイコン*/
+        background-size: 100%;
+    }
+
+    .train_route{
+        font-size: 10px;
+        width: 60px;
+        line-height: 1.2em;
+    }
+
+    /*アクセスmap*/
+    .shop_map{
+        width:290px;
+        height:210px;
+        font-size: 0;
+        margin-top: 10px;
+    }
+
+    .map_btn{
+        margin-top:20px;
+        width: 290px;
+        text-align: right;
+        margin-bottom: 50px;
+    }
+
+    .map_btn a img{
+        width: 110px;
+    }
 }
